made html and css change

--- a/a-basic/index.html
+++ b/a-basic/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>header</h1>
-    </header>   
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Basic Layout</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="wrapper">
+            <header>
+                <h1>header</h1>
+            </header>
+            <section>
+                <aside>Sidebar including navigation</aside>
+                <main>content</main>   
+            </section>       
+            <footer>Footer</footer>
+        </div> 
+    </body>
 </html>
