--- a/sports-warehouse/index.html
+++ b/sports-warehouse/index.html
@@ -16,7 +16,7 @@
   <header class="top-bar">
     <div class="container">
       <nav class="menu">
-        <label id="menu-toggle" class="menu__toggle"><span>&#9776;</span> Menu</label>
+        <h1 id="menu-toggle" class="menu__toggle"><span>&#9776;</span> Menu</h1>
         <ul class="menu__items">
           <li class="menu__item "><a class="menu__link" href="#">Home</a></li>
           <li class="menu__item"><a class="menu__link" href="#">About SW</a></li>
@@ -102,8 +102,8 @@
         <span class="dot" onclick=""></span> 
       </div>
       <div class="banner-content">
-        <p class="banner-text1">View Our Brand<br>new range of</p>
-        <p class="banner-text2">Sports<br>balls</p>
+        <h2 class="banner-text1">View Our Brand<br>new range of</h2>
+        <h2 class="banner-text2">Sports<br>balls</h2>
         <button class="shop-button">Shop now</button>
       </div>
     </div>
@@ -112,7 +112,7 @@
 
     <section class="featured-products">
       <div class="white-text">
-        <p>Featured Products</p>
+        <h3>Featured Products</h3>
       </div>
       <div class="product-grid">
 
@@ -167,7 +167,7 @@
 
     <section class="brands-partnerships">
       <div class="white-text">
-        <p>Our Brands and Partnerships</p>
+        <h3>Our Brands and Partnerships</h3>
       </div>
 
       <div class="partnership">
